{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 10,
  "lineage": "f78ecfe9-ef2e-ec49-3feb-e2e91f212a10",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "celebal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/networkSecurityGroups/celebal_cloud",
            "location": "eastus",
            "name": "celebal_cloud",
            "resource_group_name": "celebal_cloud_project",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port443",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/networkSecurityGroups/celebal_cloud/securityRules/Allow443",
            "name": "Allow443",
            "network_security_group_name": "celebal_cloud",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "celebal_cloud_project",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.celebal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/networkSecurityGroups/celebal_cloud/securityRules/Allow80",
            "name": "Allow80",
            "network_security_group_name": "celebal_cloud",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "celebal_cloud_project",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.celebal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "celebal-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/publicIPAddresses/celebal-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.92.25.47",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "celebal-publicIP",
            "resource_group_name": "celebal_cloud_project",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.celebal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "celebal-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/virtualNetworks/celebal-vnet/subnets/testsubnet",
            "name": "testsubnet",
            "resource_group_name": "celebal_cloud_project",
            "virtual_network_name": "celebal-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.celebal",
            "azurerm_virtual_network.celebal-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "celebal-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "id": "/subscriptions/9dcc8864-bd64-4048-badd-b735a9f354c7/resourceGroups/celebal_cloud_project/providers/Microsoft.Network/virtualNetworks/celebal-vnet",
            "location": "eastus",
            "name": "celebal-vnet",
            "resource_group_name": "celebal_cloud_project",
            "tags": {
              "environment": "Dev"
            }
          }
        }
      ]
    }
  ]
}